@@ -1,3 +1,8 @@
+2011-10-09  Jeremy Cribb <jcribb@email.unc.edu>
+	* filter_video_tracking.m:  implemented 'dead_spots' and 'remove_drift' filters.
+	* load_video_tracking.m:  fixed bug where an empty 'first file' in a list would abandon any data loaded from subsequent files in the list.
+	* remove_drift.m:  fixed bug where large empty periods in a movie would corrupt the fitting parameters.  Fixed by reducing the complexity of the algorithm.  It doesn't generalize to any drift function anymore, it patently assumes a linear drift (constant velocity).
+
 2011-09-27  Jeremy Cribb <jcribb@email.unc.edu>
 	* filter_video_tracking.m:  fixed the default values for all filters to reflect conditions such that each filter was not run at all.  
 
